week2/Drones_Website/style.css
* {
    box-sizing: border-box;
}

section:after {
    content: "";
    clear: both;
    display: table;
}
/* ADDING FONTS */
@font-face {
    font-family: 'Roboto';
    src: url(Roboto-Regular.ttf);
}
@font-face {
    font-family: 'OpenSans';
    src: url(OpenSans-Regular.ttf);
}

h1 {
    text-align: center;
    color: #f5f5f5;
    font-family: Roboto;
    font-size: 6rem;
    letter-spacing: 0.5rem;
}

h2 {
    text-align: center;
    color: #f5f5f5;
    font-family: Opensans;
    line-height: 4rem;
    font-size: 3rem;
}

h3 {
    font-family: OpenSans;
    font-size: 1.5rem;
}

p {
    font-family: OpenSans;
    font-size: 1.1rem;
}

body {
    margin: 0;
    background: linear-gradient(to right, rgba(255,93,177,1) 0%, rgba(239,1,124,1) 0%, rgba(235,104,5,1) 100%);
    color: rgb(30, 31, 27);
}

img {
    display: block;
    width: 100%;
}

li {
    list-style-type: none;
}

.grid-item {
    background-color: rgb(255, 255, 255);
    width: calc(25% - 2rem);
    height: 600px;
    overflow: hidden;
    margin: 0.5rem;
    padding: 0.5rem;
    border-radius: 10px 10px 10px 10px;
    transition: all 0.5s ease-in-out;
    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
}
.grid-item:hover {
    cursor: pointer;
    transform: translateY(2%);
}

/* GRID FLOATS */
#grid-floats li {
    float: left;
}

#grid-floats li:nth-child(1) {
    width: calc(50% - 3rem);
}

/* GRID FLEX */
#grid-flex {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
}

#grid-flex li:nth-child(1) {
    width: calc(50% - 3rem);
}

/* FOR TABLET VIEW */
@media only screen and (min-width:601px) and (max-width:900px) {

    #grid-floats li:nth-child(-n + 2) {
        width: calc(50% - 2rem);
    }
    #grid-floats .grid-item {
        width: calc(33% - 1.5rem);
    }
    #grid-flex li:nth-child(-n + 2) {
        width: calc(50% - 2rem);
    }
    #grid-flex .grid-item {
        width: calc(33% - 1.5rem);
    }
}

/* FOR MOBILE VIEW */
@media only screen and (max-width:600px) {

    #grid-floats li:nth-child(1) {
        width: calc(100% - 1rem);
    }
    #grid-floats .grid-item {
        width: calc(50% - 1rem);
    }
    #grid-flex li:nth-child(1) {
        width: calc(100% - 1rem);
    }
    #grid-flex .grid-item {
        width: calc(50% - 1rem);
    }
}

